Clean up files, Modify the Users table, Optimize Routes, Add a spec
This commit is addressing several of previous concerns.
1) A few gems were added to help in style and syntactical errors
2) A few auto generated files were deleted because they are currently
not being used.
3) The routes file is now only including the only routes we have,
helping with the speed of the app.
4) Two migrations were created to make sure no new users can have a
blank name or email when created.
5) A model spec was added to test on validity of a new user.

The next thing will be to modify the 'create_a_user' feature spec to
preserve the 4 test phases.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -30,4 +30,5 @@
 # available at https://guides.rubyonrails.org/i18n.html.
 
 en:
-  hello: "Hello world"
+  hello: "Hello world" 
+  signed_up: 'You have successfully signed up!'
