Adding a recipe model and validations for title, ingredients, and instructions.
Updated the routes to be nested in user (for easier readability).

Added a flash message (bare bones) to let the user know whether or not a recipe saves.

Moved all static strings to I18n with proper indentation and changed from form_for to form_with

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -30,5 +30,9 @@
 # available at https://guides.rubyonrails.org/i18n.html.
 
 en:
-  hello: "Hello world" 
-  signed_up: 'You have successfully signed up!'
+  layouts:
+    application:
+      signed_up: 'You have successfully signed up!'
+      new_recipe: 'Create a New Recipe'
+      success: 'Your recipe saved successfully!'
+      alert: 'Please fix the errors and try again'
