--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -34,5 +34,11 @@ en:
     application:
       signed_up: 'You have successfully signed up!'
       new_recipe: 'Create a New Recipe'
+      view_recipes: 'View all Recipes'
       success: 'Your recipe saved successfully!'
       alert: 'Please fix the errors and try again'
+  recipes:
+    index:
+      show_recipe: 'Show recipe'
+    show:
+      add_picture: 'Add a picture'
