Move alert to I18n

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -35,6 +35,10 @@ en:
       signed_up: 'You have successfully signed up!'
       new_recipe: 'Create a New Recipe'
       view_recipes: 'View all Recipes'
+  controllers:
+    home:
+      search:
+        not_found: 'Brewery not found'
   recipes:
     index:
       show_recipe: 'Show recipe'
